syntax = "proto2";
package message;

enum EnumType
{
	OK = 1;
	LOGIN_ERROR = 2;
	ERROR = 3;
}

message Vector3
{
	required int32 pos1 = 1;
	required int32 pos2 = 2;
	required int32 pos3 = 3;
}

message common_toS {}

message common_toC {}
